/*
 * Copyright Siemens AG, 2016-2018. Part of the SW360 Portal Project.
 * With contributions by Bosch Software Innovations GmbH, 2016.
 *
 * SPDX-License-Identifier: EPL-1.0
 *
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 */
include "users.thrift"
include "components.thrift"
include "projects.thrift"

namespace java org.eclipse.sw360.datahandler.thrift.licenseinfo
namespace php sw360.thrift.licenseinfo

typedef components.Release Release
typedef components.Attachment Attachment
typedef users.User User
typedef projects.Project Project

enum LicenseInfoRequestStatus{
    SUCCESS = 0,
    NO_APPLICABLE_SOURCE = 1,
    FAILURE = 2,
}

enum OutputFormatVariant{
    REPORT = 0,
    DISCLOSURE = 1,
}

struct OutputFormatInfo {
    1: optional string fileExtension,
    2: optional string description,
    3: optional string generatorClassName,
    4: bool isOutputBinary,
    5: optional string mimeType,
    6: optional OutputFormatVariant variant,
}

struct LicenseNameWithText {
    1: optional string licenseName,
    2: optional string licenseText,
    /* 3: optional i32 id, removed since only used as counter in XhtmlGenerator */
    4: optional string acknowledgements,
    5: optional string licenseSpdxId,
    6: optional string type,
}

struct LicenseInfo {
    10: optional list<string> filenames, // actual sources used
//    11: required string filetype, // actual parser type used

    20: optional set<string> copyrights,
    21: optional set<LicenseNameWithText> licenseNamesWithTexts,
    22: optional string sha1Hash,
    23: optional string componentName,
}

struct LicenseInfoParsingResult {
    1: required LicenseInfoRequestStatus status,
    2: optional string message,
    3: optional LicenseInfo licenseInfo,

    // identifying data of the scanned release, if applicable
    30: optional string vendor,
    31: optional string name,
    32: optional string version,
    33: optional string componentType,

    42: optional set<string> componentLanguages,
    43: optional set<string> componentSoftwarePlatforms,
    44: optional set<string> componentOperatingSystems,
}

enum ObligationInfoRequestStatus {
    SUCCESS = 0,
    NO_APPLICABLE_SOURCE = 1,
    FAILURE = 2,
}

struct ObligationParsingResult {
    1: required ObligationInfoRequestStatus status,
    2: optional string message,
    3: optional list<Obligation> obligations,
}

struct Obligation {
    1: required string topic,
    2: required string text,
    3: required list<string> licenseIDs,
}

struct LicenseInfoFile {
    1: required OutputFormatInfo outputFormatInfo,
    2: required binary              generatedOutput,
}

service LicenseInfoService {

    /**
     * parses the attachment of one release for license information and returns the result.
     */
    list<LicenseInfoParsingResult> getLicenseInfoForAttachment(1: Release release, 2: string attachmentContentId, 3: User user);

    /**
     * get a copyright and license information file on all linked releases and linked releases of linked projects (recursively)
     * output format as specified by outputType
     */
    LicenseInfoFile getLicenseInfoFile(1: Project project, 2: User user, 3: string outputGeneratorClassName, 4: map<string, set<string>> releaseIdsToSelectedAttachmentIds, 5: map<string, set<LicenseNameWithText>> excludedLicensesPerAttachment);

    /**
      * returns all available output types
      */
    list<OutputFormatInfo> getPossibleOutputFormats();

    /**
     * returns file extension that is applicable when licenseInfo is generated by the generator class
     */
    OutputFormatInfo getOutputFormatInfoForGeneratorClass(1: string generatorClassName);

    /**
     * returns the default license info header text
     */
    string getDefaultLicenseInfoHeaderText();

    /**
     * returns the default obligations text
     */
    string getDefaultObligationsText();

}
